🔒 SECURITY: Remove exposed Stripe API keys

--- a/exercises.html
+++ b/exercises.html
@@ -114,6 +114,12 @@
         <div class="exercises-header">
             <h1 style="color: white; margin-bottom: 1rem;">🧘 Wellness Exercises</h1>
             <p style="color: var(--gray);">Practice these guided exercises with NUPI to reduce stress and improve mental wellness</p>
+            
+            <div style="margin-top: 2rem;">
+                <a href="yoga-guide.html" style="display: inline-block; padding: 1rem 2rem; background: linear-gradient(135deg, var(--therapeutic-green), var(--peaceful-teal)); color: white; text-decoration: none; border-radius: 12px; font-weight: 600; transition: all 0.3s ease;">
+                    🧘 Try Interactive Yoga & Poses Guide →
+                </a>
+            </div>
         </div>
 
         <div class="exercises-grid">
@@ -193,6 +199,8 @@
 
     <!-- Chat Widget -->
     <link rel="stylesheet" href="chat-widget.css">
+    <script src="nupi-avatar.js"></script>
+    <script src="chat-guide-system.js"></script>
     <script src="chat-widget.js"></script>
 
     <script>
