--- a/sign-in.html
+++ b/sign-in.html
@@ -55,6 +55,8 @@
     </main>
 
     <link rel="stylesheet" href="chat-widget.css">
+    <script src="nupi-avatar.js"></script>
+    <script src="chat-guide-system.js"></script>
     <script src="chat-widget.js"></script>
 
     <script>
