--- a/therapy-admin-dashboard.html
+++ b/therapy-admin-dashboard.html
@@ -260,6 +260,8 @@
         </div>
     </div>
 
+    <script src="nupi-avatar.js"></script>
+    <script src="chat-guide-system.js"></script>
     <script src="chat-widget.js"></script>
     <script>
         function checkAdminAuth() {
