--- a/forgot-password.html
+++ b/forgot-password.html
@@ -176,6 +176,8 @@
     </main>
 
     <link rel="stylesheet" href="chat-widget.css">
+    <script src="nupi-avatar.js"></script>
+    <script src="chat-guide-system.js"></script>
     <script src="chat-widget.js"></script>
 
     <script>
