--- a/index-old.html
+++ b/index-old.html
@@ -926,7 +926,7 @@
                     <h4>Product</h4>
                     <ul class="footer-links">
                         <li><a href="dashboard.html">Dashboard</a></li>
-                        <li><a href="therapists.html">Find Therapist</a></li>
+                        <li><a href="therapist-finder.html">Find Therapist</a></li>
                         <li><a href="games.html">Wellness Games</a></li>
                         <li><a href="resources.html">Resources</a></li>
                         <li><a href="billing.html">Pricing</a></li>
