--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             </button>
             <div class="nav-links" id="navLinks">
                 <a href="#features">Features</a>
-                <a href="therapists.html">Find Therapist</a>
+                <a href="therapist-finder.html">Find Therapist</a>
                 <a href="resources.html">Resources</a>
                 <a href="resources.html">Wellness Games</a>
                 <a href="sign-in.html">Sign In</a>
@@ -606,7 +606,7 @@
                     <h4>Product</h4>
                     <ul class="footer-links">
                         <li><a href="dashboard.html">Dashboard</a></li>
-                        <li><a href="therapists.html">Find Therapist</a></li>
+                        <li><a href="therapist-finder.html">Find Therapist</a></li>
                         <li><a href="resources.html">Wellness Games</a></li>
                         <li><a href="resources.html">Resources</a></li>
                         <li><a href="billing.html">Pricing</a></li>
@@ -687,6 +687,8 @@
             });
         });
     </script>
+    <script src="nupi-avatar.js"></script>
+    <script src="chat-guide-system.js"></script>
     <script src="chat-widget.js"></script>
 </body>
 </html>
