--- a/reset-password.html
+++ b/reset-password.html
@@ -229,6 +229,8 @@
     </main>
 
     <link rel="stylesheet" href="chat-widget.css">
+    <script src="nupi-avatar.js"></script>
+    <script src="chat-guide-system.js"></script>
     <script src="chat-widget.js"></script>
 
     <script>
