--- a/signup.html
+++ b/signup.html
@@ -193,6 +193,8 @@
     </script>
 
     <link rel="stylesheet" href="chat-widget.css">
+    <script src="nupi-avatar.js"></script>
+    <script src="chat-guide-system.js"></script>
     <script src="chat-widget.js"></script>
 </body>
 </html>
