--- a/success.html
+++ b/success.html
@@ -142,7 +142,7 @@
 
             <div class="cta-buttons">
                 <a href="dashboard.html" class="btn btn-large btn-primary">Go to Dashboard</a>
-                <a href="therapists.html" class="btn btn-large btn-secondary">Browse Therapists</a>
+                <a href="therapist-finder.html" class="btn btn-large btn-secondary">Browse Therapists</a>
             </div>
 
             <p style="margin-top: 2rem; color: #8b92b0; font-size: 0.9rem;">
@@ -174,6 +174,8 @@
         }
     </script>
     <link rel="stylesheet" href="chat-widget.css">
+    <script src="nupi-avatar.js"></script>
+    <script src="chat-guide-system.js"></script>
     <script src="chat-widget.js"></script>
 </body>
 </html>
