Remove emojis from section headers for cleaner layout

--- a/art-therapy.html
+++ b/art-therapy.html
@@ -478,7 +478,7 @@
                     <div class="canvas-tools">
                         <!-- Color Palette with Rainbow & Custom -->
                         <div class="tool-section">
-                            <h4>🌈 Colors</h4>
+                            <h4>Colors</h4>
                             <div class="color-palette">
                                 <button class="color-btn active" style="background: #000000;" onclick="selectColor('#000000')" title="Black"></button>
                                 <button class="color-btn" style="background: #ef4444;" onclick="selectColor('#ef4444')" title="Red"></button>
@@ -499,7 +499,7 @@
 
                         <!-- Tool Selection -->
                         <div class="tool-section">
-                            <h4>🎨 Tools</h4>
+                            <h4>Tools</h4>
                             <div class="brush-sizes" style="grid-template-columns: repeat(5, 1fr);">
                                 <button class="size-btn active" onclick="useTool('brush')">
                                     🖌️<br>Brush
@@ -521,7 +521,7 @@
 
                         <!-- Brush Sizes -->
                         <div class="tool-section">
-                            <h4>📏 Size</h4>
+                            <h4>Size</h4>
                             <div style="display: flex; align-items: center; gap: 1rem;">
                                 <input type="range" id="brushSizeSlider" min="1" max="50" value="5" 
                                        style="flex: 1; height: 8px; border-radius: 10px; background: linear-gradient(90deg, var(--therapeutic-green), var(--peaceful-teal));" 
@@ -532,7 +532,7 @@
 
                         <!-- Stamps -->
                         <div class="tool-section">
-                            <h4>🎭 Stamps & Emojis</h4>
+                            <h4>Stamps & Emojis</h4>
                             <div class="color-palette" style="grid-template-columns: repeat(8, 1fr);">
                                 <button class="size-btn" onclick="addStamp('❤️')" title="Heart">❤️</button>
                                 <button class="size-btn" onclick="addStamp('⭐')" title="Star">⭐</button>
@@ -555,7 +555,7 @@
 
                         <!-- Actions -->
                         <div class="tool-section">
-                            <h4>⚡ Actions</h4>
+                            <h4>Actions</h4>
                             <div class="action-btns" style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 0.5rem;">
                                 <button class="action-btn" onclick="undoLastAction()" style="background: rgba(59, 130, 246, 0.2); border-color: #3b82f6;">
                                     ↶ Undo
